Finished css styles (all resolutions) of final product page.
Pinned the footer to the bottom of the final product page when there was no content (main_small-header).

--- a/product.html
+++ b/product.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+        <link rel="stylesheet" href="css/fancybox4/fancybox4.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <title>Product</title>
     </head>
     <body>
-        <header class="header header-category-page">
+        <header class="header header_small">
             <div class="container container-header">
                 <div class="logo header__logo">
                     <a href="index.html" class="logo__link">
@@ -37,28 +38,40 @@
                             <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Ремни</a>
+                                    <a href="catagory.html" class="sub-nav__item-link">Ремни</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Ремешки для часов</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Ремешки для часов</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Картхолдеры</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Картхолдеры</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Обложки для паспорта</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Обложки для паспорта</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Чехлы для ручек</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Чехлы для ручек</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Зажимы для денег</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Зажимы для денег</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Аксессуары</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Аксессуары</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Другое</a>
+                                    <a href="catagory.html" class="sub-nav__item-link">Другое</a>
                                 </li>
                             </ul>
                         </li>
@@ -74,16 +87,20 @@
                             <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Способы доставки</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Способы доставки</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">Способы оплаты</a>
+                                    <a href="catagory.html" class="sub-nav__item-link"
+                                        >Способы оплаты</a
+                                    >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link">О нас</a>
+                                    <a href="catagory.html" class="sub-nav__item-link">О нас</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Часто задаваемые вопросы</a
                                     >
                                 </li>
@@ -98,90 +115,97 @@
             </div>
         </header>
 
-        <section class="main">
+        <section class="main main_small-header">
             <div class="container">
                 <div class="end-product">
                     <div class="h1 h1_end-product">
-                        <h1 class="h1__title h1-title_end-product">Ремень из кожи буйвола 
-                            коричневого цвета</h1>
+                        <h1 class="h1__title h1-title_end-product">
+                            Ремень из кожи буйвола коричневого цвета
+                        </h1>
                     </div>
-                    <div class="end-product-img">
-                        <div id="mainCarousel" class="carousel">
-                            <div
-                                class="carousel__slide"
-                                data-src="img/product/end-prod-big-1.jpg"
-                                data-fancybox="gallery"
-                            >
-                                <img src="img/product/end-prod-main-1.jpg" alt="" title="" />
+                    <div class="end-product_wrap">
+                        <div class="end-product-img">
+                            <div id="mainCarousel" class="carousel">
+                                <div
+                                    class="carousel__slide"
+                                    data-src="img/product/end-prod-big-1.jpg"
+                                    data-fancybox="gallery"
+                                >
+                                    <img src="img/product/end-prod-main-1.jpg" alt="" title="" />
+                                </div>
+                                <div
+                                    class="carousel__slide"
+                                    data-src="img/product/end-prod-big-2.jpg"
+                                    data-fancybox="gallery"
+                                >
+                                    <img src="img/product/end-prod-main-2.jpg" alt="" title="" />
+                                </div>
+                                <div
+                                    class="carousel__slide"
+                                    data-src="img/product/end-prod-big-3.jpg"
+                                    data-fancybox="gallery"
+                                >
+                                    <img src="img/product/end-prod-main-3.jpg" alt="" title="" />
+                                </div>
                             </div>
-                            <div
-                                class="carousel__slide"
-                                data-src="img/product/end-prod-big-2.jpg"
-                                data-fancybox="gallery"
-                            >
-                                <img src="img/product/end-prod-main-2.jpg" alt="" title="" />
-                            </div>
-                            <div
-                                class="carousel__slide"
-                                data-src="img/product/end-prod-big-3.jpg"
-                                data-fancybox="gallery"
-                            >
-                                <img src="img/product/end-prod-main-3.jpg" alt="" title="" />
+                            <div id="thumbCarousel" class="carousel">
+                                <div class="carousel__slide">
+                                    <img
+                                        class="panzoom__content"
+                                        src="img/product/end-prod-small-1.jpg"
+                                        alt=""
+                                        title=""
+                                    />
+                                </div>
+                                <div class="carousel__slide">
+                                    <img
+                                        class="panzoom__content"
+                                        src="img/product/end-prod-small-2.jpg"
+                                        alt=""
+                                        title=""
+                                    />
+                                </div>
+                                <div class="carousel__slide">
+                                    <img
+                                        class="panzoom__content"
+                                        src="img/product/end-prod-small-3.jpg"
+                                        alt=""
+                                        title=""
+                                    />
+                                </div>
                             </div>
                         </div>
-                        <div id="thumbCarousel" class="carousel">
-                            <div class="carousel__slide">
-                                <img
-                                    class="panzoom__content"
-                                    src="img/product/end-prod-small-1.jpg"
-                                    alt=""
-                                    title=""
-                                />
-                            </div>
-                            <div class="carousel__slide">
-                                <img
-                                    class="panzoom__content"
-                                    src="img/product/end-prod-small-2.jpg"
-                                    alt=""
-                                    title=""
-                                />
-                            </div>
-                            <div class="carousel__slide">
-                                <img
-                                    class="panzoom__content"
-                                    src="img/product/end-prod-small-3.jpg"
-                                    alt=""
-                                    title=""
-                                />
-                            </div>
+                        <div class="end-product-spec">
+                            <ul class="end-product-spec__list">
+                                <li class="end-product-spec__item end-product-spec__price">
+                                    Цена: 3 577 &#8381;
+                                </li>
+                                <li class="end-product-spec__item">Цвет: черный</li>
+                                <li class="end-product-spec__item">Материал: кожа бизона</li>
+                                <li class="end-product-spec__item">Размер: 1500х500х400</li>
+                                <li class="end-product-spec__item">Срок изготоления: 7дней</li>
+                                <li class="end-product-spec__item">Фурнитура: латунь (Германия)</li>
+                                <li class="end-product-spec__item">
+                                    Упаковка: упаковывается в крафтовую бумагу повязанную ващеной
+                                    нитью
+                                </li>
+                                <li class="end-product-spec__item end-product-spec__description">
+                                    <span class="">Описание товара:</span>
+                                    <p class="end-product-spec__description_p">
+                                        Бумажник из неокрашенной немецкой кожи растительного
+                                        дубления, вмещающий в себя купюры, визитки и пластиковые
+                                        карты. Может быть окрашен в любой цвет по вашему желанию.
+                                        При покупке этого изделия вы получите монетницу в подарок.
+                                    </p>
+                                </li>
+                            </ul>
+                            <button data-fancybox="" data-src="#modal-window" class="main-button">
+                                Оформить заказ
+                            </button>
                         </div>
-                    </div>
-                    <div class="end-product-spec">
-                        <ul class="end-product-spec__list">
-                            <li class="end-product-spec__item">Цена: 3 577 &#8381;</li>
-                            <li class="end-product-spec__item">Цвет: черный</li>
-                            <li class="end-product-spec__item">Материал: кожа бизона</li>
-                            <li class="end-product-spec__item">Размер: 1500х500х400</li>
-                            <li class="end-product-spec__item">Срок изготоления: 7дней</li>
-                            <li class="end-product-spec__item">
-                                Упаковка: упаковывается в крафтовую бумагу повязанную ващеной нитью
-                            </li>
-                            <li class="end-product-spec__item">
-                                <span class="">Описание товара:</span>
-                                <p class="end-product-spec__description">
-                                    Бумажник из неокрашенной немецкой кожи растительного дубления,
-                                    вмещающий в себя купюры, визитки и пластиковые карты. Может быть
-                                    окрашен в любой цвет по вашему желанию. При покупке этого
-                                    изделия вы получите монетницу в подарок.
-                                </p>
-                            </li>
-                        </ul>
-                        <button data-fancybox="" data-src="#modal-window" class="main-button">
-                            Оформить заказ
-                        </button>
                     </div>
                 </div>
-                <div class="services">
+                <!-- <div class="services">
                     <div class="h2">
                         <h2 class="h2__title">Дополнительные услуги</h2>
                         <span class="title-underline"></span>
@@ -212,7 +236,7 @@
                             <p class="services__item-p">Персонализация</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
 
@@ -275,8 +299,6 @@
         </footer>
     </body>
     <!-- Подключаем файл скриптов -->
-    <link rel="stylesheet" href="css/fancybox4/fancybox4.css" />
-    <link rel="stylesheet" href="css/style.css" />
     <script src="js/fancybox4/fancybox.umd.js"></script>
     <script src="js/script.js"></script>
 </html>
