Changed the block "Additional services".
Adjusted the display of different photos depending on the screen resolution.
Added the "Additional Services" block to the final product page.

--- a/index.html
+++ b/index.html
@@ -275,27 +275,71 @@
                     </div>
                     <div class="services__list">
                         <div class="services__item">
-                            <img
-                                src="img/choice_leather_and_accessories.jpg"
-                                alt="Выбор кожи и фурнитуры"
-                                class="services__item-img"
-                            />
+                            <picture>
+                                <source
+                                    media="(max-width: 576px)"
+                                    srcset="img/choice_leather_and_accessories_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/choice_leather_and_accessories_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="img/choice_leather_and_accessories_1200px.jpg"
+                                />
+                                <img
+                                    src="img/choice_leather_and_accessories.jpg"
+                                    alt="Выбор кожи и фурнитуры"
+                                    class="services__item-img"
+                                />
+                            </picture>
+
                             <p class="services__item-p">Выбор кожи и фурнитуры</p>
                         </div>
                         <div class="services__item">
-                            <img
-                                src="img/drawing_picture.jpg"
-                                alt="Нанесение рисунка"
-                                class="services__item-img"
-                            />
+                            <picture>
+                                <source
+                                    media="(max-width: 576px)"
+                                    srcset="img/drawing_picture_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/drawing_picture_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="img/drawing_picture_1200px.jpg"
+                                />
+                                <img
+                                    src="img/drawing_picture.jpg"
+                                    alt="Нанесение рисунка"
+                                    class="services__item-img"
+                                />
+                            </picture>
                             <p class="services__item-p">Нанесение рисунка</p>
                         </div>
                         <div class="services__item">
-                            <img
-                                src="img/personalization.jpg"
-                                alt="Персонализация"
-                                class="services__item-img"
-                            />
+                            <picture>
+                                <source
+                                    media="(max-width: 576px)"
+                                    srcset="img/personalization_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/personalization_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="img/personalization_1200px.jpg"
+                                />
+                                <img
+                                    src="img/personalization.jpg"
+                                    alt="Персонализация"
+                                    class="services__item-img"
+                                />
+                            </picture>
+
                             <p class="services__item-p">Персонализация</p>
                         </div>
                     </div>
