--- a/product.html
+++ b/product.html
@@ -205,38 +205,82 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="services">
-                    <div class="h2">
+                <div class="services">
+                    <div class="h2 h2_end-product">
                         <h2 class="h2__title">Дополнительные услуги</h2>
-                        <span class="title-underline"></span>
+                        <!-- <span class="title-underline"></span> -->
                     </div>
                     <div class="services__list">
                         <div class="services__item">
-                            <img
-                                src="img/choice_leather_and_accessories.jpg"
-                                alt="Выбор кожи и фурнитуры"
-                                class="services__item-img"
-                            />
+                            <picture>
+                                <source
+                                    media="(max-width: 576px)"
+                                    srcset="img/choice_leather_and_accessories_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/choice_leather_and_accessories_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="img/choice_leather_and_accessories_1200px.jpg"
+                                />
+                                <img
+                                    src="img/choice_leather_and_accessories.jpg"
+                                    alt="Выбор кожи и фурнитуры"
+                                    class="services__item-img"
+                                />
+                            </picture>
+
                             <p class="services__item-p">Выбор кожи и фурнитуры</p>
                         </div>
                         <div class="services__item">
-                            <img
-                                src="img/drawing_picture.jpg"
-                                alt="Нанесение рисунка"
-                                class="services__item-img"
-                            />
+                            <picture>
+                                <source
+                                    media="(max-width: 576px)"
+                                    srcset="img/drawing_picture_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/drawing_picture_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="img/drawing_picture_1200px.jpg"
+                                />
+                                <img
+                                    src="img/drawing_picture.jpg"
+                                    alt="Нанесение рисунка"
+                                    class="services__item-img"
+                                />
+                            </picture>
                             <p class="services__item-p">Нанесение рисунка</p>
                         </div>
                         <div class="services__item">
-                            <img
-                                src="img/personalization.jpg"
-                                alt="Персонализация"
-                                class="services__item-img"
-                            />
+                            <picture>
+                                <source
+                                    media="(max-width: 576px)"
+                                    srcset="img/personalization_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="img/personalization_1200px.jpg"
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="img/personalization_1200px.jpg"
+                                />
+                                <img
+                                    src="img/personalization.jpg"
+                                    alt="Персонализация"
+                                    class="services__item-img"
+                                />
+                            </picture>
+
                             <p class="services__item-p">Персонализация</p>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </section>
 
