Added contacts page (mobile, tablet, desktop versions).
Created a file "contacts.html", set CSS styles (*** Contacts ****)

--- a/catagory.html
+++ b/catagory.html
@@ -90,7 +90,7 @@
                             </ul>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__item-link">Контакты</a>
+                            <a href="contacts.html" class="nav__item-link">Контакты</a>
                             <span class="title-underline nav-title-underline"></span>
                         </li>
                     </ul>
