--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/fancybox4/fancybox4.css" />
         <link rel="stylesheet" href="css/style.css" />
-        <title>Product</title>
+        <title>Contacts</title>
     </head>
     <body>
         <header class="header header_small">
@@ -117,91 +117,47 @@
 
         <section class="main main_small-header">
             <div class="container">
-                <div class="end-product">
+                <div class="contacts">
                     <div class="h1 h1_end-product">
-                        <h1 class="h1__title h1-title_end-product">
-                            Ремень из кожи буйвола коричневого цвета
-                        </h1>
+                        <h1 class="h1__title h1-title_end-product">Наши контакты</h1>
                     </div>
-                    <div class="end-product_wrap">
-                        <div class="end-product-img">
-                            <div id="mainCarousel" class="carousel">
-                                <div
-                                    class="carousel__slide"
-                                    data-src="img/product/end-prod-big-1.jpg"
-                                    data-fancybox="gallery"
-                                >
-                                    <img src="img/product/end-prod-main-1.jpg" alt="" title="" />
-                                </div>
-                                <div
-                                    class="carousel__slide"
-                                    data-src="img/product/end-prod-big-2.jpg"
-                                    data-fancybox="gallery"
-                                >
-                                    <img src="img/product/end-prod-main-2.jpg" alt="" title="" />
-                                </div>
-                                <div
-                                    class="carousel__slide"
-                                    data-src="img/product/end-prod-big-3.jpg"
-                                    data-fancybox="gallery"
-                                >
-                                    <img src="img/product/end-prod-main-3.jpg" alt="" title="" />
-                                </div>
-                            </div>
-                            <div id="thumbCarousel" class="carousel">
-                                <div class="carousel__slide">
-                                    <img
-                                        class="panzoom__content"
-                                        src="img/product/end-prod-small-1.jpg"
-                                        alt=""
-                                        title=""
-                                    />
-                                </div>
-                                <div class="carousel__slide">
-                                    <img
-                                        class="panzoom__content"
-                                        src="img/product/end-prod-small-2.jpg"
-                                        alt=""
-                                        title=""
-                                    />
-                                </div>
-                                <div class="carousel__slide">
-                                    <img
-                                        class="panzoom__content"
-                                        src="img/product/end-prod-small-3.jpg"
-                                        alt=""
-                                        title=""
-                                    />
-                                </div>
-                            </div>
+                    <div class="contacts_wrap">
+                        <div class="contacts-img">
+                            <img src="img/contacts.jpg" alt="" class="contacts-img__image">
                         </div>
-                        <div class="end-product-spec">
-                            <ul class="end-product-spec__list">
-                                <li class="end-product-spec__item end-product-spec__price">
-                                    Цена: 3 577 &#8381;
+                        <div class="contacts-info">
+                            <ul class="contacts-list">
+                                <li class="cotacts-item">
+                                    <span class="cotacts-item__title">Телефон для звонков:</span
+                                    ><span class="cotacts-item__text">
+                                        <a href="tel:+79770129015" class="cotacts-item__link">+7 (977) 012-90-15</a></span
+                                    >
                                 </li>
-                                <li class="end-product-spec__item">Цвет: черный</li>
-                                <li class="end-product-spec__item">Материал: кожа бизона</li>
-                                <li class="end-product-spec__item">Размер: 1500х500х400</li>
-                                <li class="end-product-spec__item">Срок изготоления: 7дней</li>
-                                <li class="end-product-spec__item">Фурнитура: латунь (Германия)</li>
-                                <li class="end-product-spec__item">
-                                    Упаковка: упаковывается в крафтовую бумагу повязанную ващеной
-                                    нитью
+                                <li class="cotacts-item">
+                                    <span class="cotacts-item__title">WhatsApp / Telegram:</span
+                                    ><span class="cotacts-item__text"
+                                        ><a href="https://telegram.im/@qualitas_store" class="cotacts-item__link"
+                                            >+7 (977) 012-90-15 (@qualitas_store)</a
+                                        ></span
+                                    >
                                 </li>
-                                <li class="end-product-spec__item end-product-spec__description">
-                                    <span class="">Описание товара:</span>
-                                    <p class="end-product-spec__description_p">
-                                        Бумажник из неокрашенной немецкой кожи растительного
-                                        дубления, вмещающий в себя купюры, визитки и пластиковые
-                                        карты. Может быть окрашен в любой цвет по вашему желанию.
-                                        При покупке этого изделия вы получите монетницу в подарок.
-                                    </p>
+                                <li class="cotacts-item"> 
+                                    <span class="cotacts-item__title">Email:</span
+                                    ><span class="cotacts-item__text"
+                                        ><a href="mailto:qualitas.store@yandex.ru" class="cotacts-item__link"
+                                            >qualitas.store@yandex.ru</a
+                                        ></span
+                                    >
+                                </li>
+                                <li class="cotacts-item">
+                                    <span class="cotacts-item__title">Instagram: </span
+                                    ><span class="cotacts-item__text"
+                                        ><a href="https://www.instagram.com/qualitas_leather/" class="cotacts-item__link"
+                                            >#qualitas_leather</a
+                                        ></span
+                                    >
                                 </li>
                             </ul>
-                            <button data-fancybox="" data-src="#modal-window" class="main-button">
-                                Оформить заказ
-                            </button>
                         </div>
                     </div>
                 </div>
