Started CSS styling of delivary page

--- a/delivery.html
+++ b/delivery.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/fancybox4/fancybox4.css" />
         <link rel="stylesheet" href="css/style.css" />
-        <title>Contacts</title>
+        <title>Delivery</title>
     </head>
     <body>
         <header class="header header_small">
@@ -117,47 +117,27 @@
 
         <section class="main main_small-header">
             <div class="container">
-                <div class="information">
+                <div class="information ">
                     <div class="h1 h1_end-product">
                         <h1 class="h1__title h1-title_end-product">Наши контакты</h1>
                     </div>
                     <div class="information_wrap">
                         <div class="info-img-block">
-                            <img src="img/contacts.jpg" alt="" class="info-img-block__image">
+                            <img src="img/delivery.jpg" alt="" class="info-img-block__image">
                         </div>
                         <div class="info-text-block">
-                            <ul class="contacts-list">
-                                <li class="cotacts-item">
-                                    <span class="cotacts-item__title">Телефон для звонков:</span
-                                    ><span class="cotacts-item__text">
-                                        <a href="tel:+79770129015" class="cotacts-item__link">+7 (977) 012-90-15</a></span
-                                    >
-                                </li>
-                                <li class="cotacts-item">
-                                    <span class="cotacts-item__title">WhatsApp / Telegram:</span
-                                    ><span class="cotacts-item__text"
-                                        ><a href="https://telegram.im/@qualitas_store" class="cotacts-item__link"
-                                            >+7 (977) 012-90-15 (@qualitas_store)</a
-                                        ></span
-                                    >
-                                </li>
-                                <li class="cotacts-item"> 
-                                    <span class="cotacts-item__title">Email:</span
-                                    ><span class="cotacts-item__text"
-                                        ><a href="mailto:qualitas.store@yandex.ru" class="cotacts-item__link"
-                                            >qualitas.store@yandex.ru</a
-                                        ></span
-                                    >
-                                </li>
-                                <li class="cotacts-item">
-                                    <span class="cotacts-item__title">Instagram: </span
-                                    ><span class="cotacts-item__text"
-                                        ><a href="https://www.instagram.com/qualitas_leather/" class="cotacts-item__link"
-                                            >#qualitas_leather</a
-                                        ></span
-                                    >
-                                </li>
+                            <p class="info-text-block__item">Основные способы доставки:</p>
+                            <ul class="delivery__list">
+                                <li class="delivery__item">транспортная компания СДЭК;</li>
+                                <li class="delivery__item">транспортная компания Boxberry;</li>
+                                <li class="delivery__item">транспортная компания DPD;</li>
+                                <li class="delivery__item">почта России.</li>
                             </ul>
+                            <p class="info-text-block__item">Стоимость и сроки доставки рассчитываются индивидуально до каждого города в зависимости от габаритов изделия и веса</p>
+                            <p class="info-text-block__item">
+                                Доставка при заказе от 10000 рублей осуществляется бесплатно</p>
+                            <p class="info-text-block__item">Доставка по городу Ростов-на-Дону 
+                                бесплатно.</p>
                         </div>
                     </div>
                 </div>
